--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
