--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.7",
     "@prisma/client": "^4.16.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.2",
