--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.7",
     "@prisma/client": "^4.16.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/validator": "^13.7.17",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "cookies-next": "^2.1.2",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
@@ -26,7 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "prisma": "^4.16.2"
