--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^4.16.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/memory-cache": "^0.2.3",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -24,6 +25,7 @@
     "cookies-next": "^2.1.2",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
+    "memory-cache": "^0.2.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
