--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.13.7",
     "@prisma/client": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
@@ -23,6 +25,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "cookies-next": "^2.1.2",
+    "heroicons": "^2.0.18",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
